# aenigmata_retexere

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  README.md  TODO.md  environment.yml  pyproject.toml  resources.md
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml
data/manuscripts/: README.md
data/manuscripts/vat.gr.1209/: manifest.json
data/manuscripts/vat.gr.1209/labels/: 41.html
data/manuscripts/vat.gr.1209/ocr/: 1.json  1_label.html
data/manuscripts/vat.gr.1209/transcriptions/: 1298_manual.json  1299_manual.json  1300_manual.json  1302_manual.json  1303_manual.json  1306_manual.json  41_manual.json  650_manual.json
data/manuscripts/vat.gr.1209/transcripts/: 41.json
data/training/: training.db
scripts/: _check_env.py  download_vaticanus.py  evaluate_ocr.py  label_ocr.py  setup.sh  start.py  transcribe.py
src/api/: main.py
src/api/routes/: training.py
src/frontend/: index.html  package-lock.json  package.json
src/frontend/src/: App.tsx
src/frontend/src/components/: ComparisonView.tsx  LabelingView.tsx  ManuscriptView.tsx  SemanticPanel.tsx  TextView.tsx  VirtualKeyboard.tsx
src/lexicon/: db.py  schema.sql
src/ocr/: preprocess.py  recognize.py
src/ocr/readers/: __init__.py  base.py  iiif.py  local.py
src/training/: chardetect.py  db.py  export.py  extractor.py  schema.sql
